git added globe gam to site and added pindrop button to menu

--- a/client_gd3/export_presets.cfg
+++ b/client_gd3/export_presets.cfg
@@ -7,14 +7,14 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/HTML/client_gd3.html"
+export_path="../site/globe/index.html"
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release="../Godot3_export_templates/webassembly_release/godot_HTML.zip"
+custom_template/release="../export_templates/webassembly_release/web-release.zip"
 variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
